[package]
name = "gba-proc-macro"
description = "proc macros for the gba crate"
version = "0.4.1"
authors = ["Lokathor <zefria@gmail.com>", "repnop"]
edition = "2018"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version="0.15.23", features = ["full"] }
quote = "0.6.9"
proc-macro2 = "0.4.24"
