[package]
name = "gba-proc-macro"
description = "proc macros for the gba crate"
version = "0.6.0"
authors = ["Lokathor <zefria@gmail.com>", "repnop"]
edition = "2018"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version="0.15.23", features = ["full", "extra-traits"] }
quote = "0.6.9"
proc-macro2 = "0.4.24"

[dependencies.rand]
version = "0.5.5"
default-features = false
